--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: wader
+Package: wadeR
 Title: Wader field work manager
 Description: Wader (or any open breeder) field work organizer: mapping and data entry. 
 Version: 0.5.3
