--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,11 @@ export(fetch_GPS_tracks)
 export(gpxPOSIXct)
 export(hatch_est)
 export(idbq)
+export(inspector.CAPTURES)
+export(inspector.DEVICES)
+export(inspector.EGGS_CHICKS)
+export(inspector.NESTS)
+export(inspector.RESIGHTINGS)
 export(ip)
 export(lastArgosTransmission)
 export(lastdbBackup)
