--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,9 @@ export(fetch_GPS_tracks)
 export(gpxPOSIXct)
 export(hatch_est)
 export(idbq)
+export(index.html)
 export(inspector)
+export(install_ui)
 export(ip)
 export(lastArgosTransmission)
 export(lastdbBackup)
