--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(RESIGHTINGS_BY_ID)
 export(UI)
 export(Wrn)
 export(badge)
+export(colorCombos)
 export(combo)
 export(coord_wader)
 export(data.tableTransform)
@@ -33,6 +34,7 @@ export(hatch_est)
 export(idbq)
 export(index.html)
 export(inspector)
+export(install_ui)
 export(ip)
 export(lastArgosTransmission)
 export(lastdbBackup)
