nanotag function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(map_resights)
 export(map_resights_by_day)
 export(map_resights_by_id)
 export(map_tracks)
+export(nanotag2db)
 export(nest2species)
 export(read_gpsID)
 export(read_tracks)
