--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(gpxPOSIXct)
 export(hatch_est)
 export(idbq)
 export(index.html)
+export(inspector)
 export(install_ui)
 export(ip)
 export(lastdbBackup)
