--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,6 @@ export(gpxPOSIXct)
 export(hatch_est)
 export(idbq)
 export(index.html)
-export(inspector)
 export(install_ui)
 export(ip)
 export(lastdbBackup)
@@ -45,6 +44,7 @@ export(map_resights_by_id)
 export(map_tracks)
 export(nanotag2db)
 export(nest2species)
+export(pwd)
 export(read_gpsID)
 export(read_tracks)
 export(read_waypoints)
@@ -54,4 +54,6 @@ export(textInputMini)
 export(theme_wader)
 export(upload_gps)
 export(yy2dbnam)
+import(anytime)
 import(broom)
+importFrom(sdb,enhanceOutput)
