--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(data.tableTransform)
 export(dayofyear2date)
 export(dbTableUpdate)
 export(dbTablesStatus)
+export(db_backup)
 export(describeTable)
 export(download_nests)
 export(fetch_GPS_points)
@@ -56,4 +57,6 @@ export(upload_gps)
 export(yy2dbnam)
 import(anytime)
 import(broom)
+import(glue)
+importFrom(gtools,permutations)
 importFrom(sdb,enhanceOutput)
