--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,8 +55,21 @@ export(textInputMini)
 export(theme_wader)
 export(upload_gps)
 export(yy2dbnam)
+import(RColorBrewer)
+import(V8)
 import(anytime)
 import(broom)
+import(foreach)
+import(ggplot2)
+import(ggrepel)
+import(ggthemes)
 import(glue)
+import(lubridate)
+import(magrittr)
+import(mapproj)
+import(methods)
+import(rgdal)
+import(stringr)
+import(utils)
 importFrom(gtools,permutations)
 importFrom(sdb,enhanceOutput)
