fix typo in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,7 @@ Suggests:
     devtools
 Remotes: 
     mpio-be/sdb,
-    mpio-be/DataEntry
+    mpio-be/DataEntry,
     mpio-be/DataEntry.validation
 VignetteBuilder: knitr
 LazyData: true
