imap UI updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ import(magrittr)
 import(mapproj)
 import(methods)
 import(rgdal)
+import(sp)
 import(stringr)
 import(utils)
 importFrom(gtools,permutations)
