--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(pwd)
 export(read_gpsID)
 export(read_tracks)
 export(read_waypoints)
+export(reboot_webserver)
 export(removeDuplicates)
 export(reporter_NESTS)
 export(sysinfo)
