--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,16 +52,17 @@ export(textInputMini)
 export(theme_wader)
 export(upload_gps)
 export(yy2dbnam)
+import(DataEntry)
 import(RColorBrewer)
 import(V8)
 import(anytime)
 import(broom)
+import(data.table)
 import(foreach)
 import(ggplot2)
 import(ggrepel)
 import(ggthemes)
 import(glue)
-import(lubridate)
 import(magrittr)
 import(mapproj)
 import(methods)
@@ -72,3 +73,5 @@ import(utils)
 import(xtable)
 importFrom(gtools,permutations)
 importFrom(sdb,enhanceOutput)
+importFrom(stats,binomial)
+importFrom(stats,time)
