teamStatus() and corresponding ui updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(reboot_webserver)
 export(removeDuplicates)
 export(reporter_NESTS)
 export(sysinfo)
+export(teamStatus)
 export(textInputMini)
 export(theme_wader)
 export(upload_gps)
