--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(Wrn)
 export(badge)
 export(colorCombos)
 export(combo)
+export(consecutive_pts_dist)
 export(coord_wader)
 export(data.tableTransform)
 export(dayofyear2date)
@@ -23,6 +24,7 @@ export(describeTable)
 export(download_nests)
 export(fetch_GPS_points)
 export(fetch_GPS_tracks)
+export(fetch_map_layers)
 export(gpxPOSIXct)
 export(hatch_est)
 export(idbq)
@@ -67,6 +69,7 @@ import(magrittr)
 import(mapproj)
 import(methods)
 import(rgdal)
+import(sf)
 import(sp)
 import(stringr)
 import(utils)
