--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: wadeR
 Title: Field work files
-Description: Field work files for Utqiaġvik (Barrow), Dümmersee (Germany), etc.
+Description: Field work files our study sites: Utqiaġvik (AK), Dümmersee (DE).
 Version: 1.0.1
 Authors@R: c( 
            person("Mihai", "Valcu",       email = "valcu@orn.mpg.de",     role = c("aut", "cre")),
@@ -23,4 +23,4 @@ VignetteBuilder: knitr
 LazyData: true
 License: GPL-3
 Encoding: UTF-8
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
